cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  CloudFormation Template for Roman Numerals Converter Application. 
  This template creates Python Flask Web Application on Amazon Linux 2023  
  EC2 Instance with custom security group allowing http connections on port 80, 8080 and SSH connection on port 22. 
  Roman Numerals Converter Application is downloaded from Github repository, then 
  installed on Flask.

Parameters:

  myVPC:
    Description: choose your vpc
    Type: AWS::EC2::VPC::Id

  myKeyPair:
    Description: choose your key pair
    Type: AWS::EC2::KeyPair::KeyName

  myInstanceType:
    Description: choose you instance type 
    Type: String
    Default: t2.micro
    AllowedValues:
         - t2.micro
         - t3.micro
         - t2.nano

  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'

     
Resources:

  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref myInstanceType
      KeyName: !Ref myKeyPair
      SecurityGroupIds: 
        - !Ref webServerSecGrp
      Tags: 
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData: !Base64 |
        #! /bin/bash
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        pip3 install flask
        dnf install git -y
        cd /home/ec2-user
        mkdir -p templates
        wget -P templates https://raw.githubusercontent.com/muhsinnnn/001-roman-numerals-converter/main/templates/index.html
        wget -P templates https://raw.githubusercontent.com/muhsinnnn/001-roman-numerals-converter/main/templates/result.html
        wget https://raw.githubusercontent.com/muhsinnnn/001-roman-numerals-converter/main/roman-numerals-converter-app.py
        python3 /home/ec2-user/roman-numerals-converter-app.py


  webServerSecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow ssh http and 8080 # Required
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080
      Tags: 
        - Key: Name
          Value: muh-roman-number-conventor
      VpcId: !Ref myVPC

Outputs: 
  webServerURL:
    Description: gives the url of webserver 
    Value: !Sub 
      - http://${PIA}:8080
      - PIA: !GetAtt myWebServer.PublicDnsName
